--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.5.0",
     "@netlify/plugin-nextjs": "^5.8.0"
+  },
+  "overrides": {
+    "eslint": "8.57.0"
   },
   "engines": {
     "node": ">=20.10.0 <21"
